--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Evan Apostolou</h1>
+    <a href="Labs/Lab1/index.html">Lab1</a>
+    
+  </body>
 </html>
