--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    //link to site https://epapostolou.github.io/N220LabsSP2022
+    
     <h1>Evan Apostolou</h1>
     <a href="Labs/Lab1/index.html">Lab1</a>
-    
+
   </body>
 </html>
