--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+//link to site https://epapostolou.github.io/N220LabsSP2022
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,10 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    //link to site https://epapostolou.github.io/N220LabsSP2022
+    
     
     <h1>Evan Apostolou</h1>
-    <a href="Labs/Lab1/index.html">Lab1</a>
+    <a href="Labs/Lab1/index.html">Lab 1</a>
+    <a href="Labs/Lab2/index.html">Practice Lab</a>
 
   </body>
 </html>
