minor homepage formatting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-//link to site https://epapostolou.github.io/N220LabsSP2022
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <! //link to site https://epapostolou.github.io/N220LabsSP2022  >
   <body>
     
     
     <h1>Evan Apostolou</h1>
     <a href="Labs/Lab1/index.html">Lab 1</a>
+    <br>
     <a href="Labs/Lab2/index.html">Practice Lab</a>
 
   </body>
