added variables to personal composition

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     
     <h1>Evan Apostolou</h1>
-    <a href="Labs/Lab1/index.html">Lab 1</a>
+    <a href="Labs/Lab1/index.html">Lab1</a>
     <br>
-    <a href="Labs/Lab2/index.html">Practice Lab</a>
+    <a href="Labs/Lab2/index.html">Personal Composition</a>
 
   </body>
 </html>
