did animations and conditional operators assignment

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     
     
     <h1>Evan Apostolou</h1>
-    <a href="Labs/Lab1/index.html">Lab1</a>
-    <br>
-    <a href="Labs/Lab2/index.html">Personal Composition</a>
+    <a href="Labs/Lab2/index.html">Personal Composition</a><br>
+    <a href="Labs/Lab3/index.html">Animations and Conditional Operators</a><br>
 
   </body>
 </html>
