--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Evan Apostolou</h1>
     <a href="Labs/Lab2/index.html">Personal Composition</a><br>
     <a href="Labs/Lab3/index.html">Animations and Conditional Operators</a><br>
+    <a href="Labs/Lab4/index.html">Functions</a><br>
 
     
   </body>
