--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="Labs/Lab2/index.html">Personal Composition</a><br>
     <a href="Labs/Lab3/index.html">Animations and Conditional Operators</a><br>
     <a href="Labs/Lab4/index.html">Functions</a><br>
-
+    <a href="Labs/Lab5/index.html">Objects Exercises</a>
     
   </body>
 </html>
