--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <a href="Labs/Lab2/index.html">Personal Composition</a><br>
     <a href="Labs/Lab3/index.html">Animations and Conditional Operators</a><br>
     <a href="Labs/Lab4/index.html">Functions</a><br>
-    <a href="Labs/Lab5/index.html">Objects Exercises</a>
+    <a href="Labs/Lab5/index.html">Objects Exercises</a><br>
+    <a href="Lab6/index.html">Document Object Manipulation Exercuses</a><br>
+    
     
   </body>
 </html>
