--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <a href="Labs/Lab3/index.html">Animations and Conditional Operators</a><br>
     <a href="Labs/Lab4/index.html">Functions</a><br>
     <a href="Labs/Lab5/index.html">Objects Exercises</a><br>
-    <a href="Lab6/index.html">Document Object Manipulation Exercuses</a><br>
+    <a href="Labs/Lab6/index.html">Document Object Manipulation Exercuses</a><br>
+
+    <a href="Labs/Lab7/index.html">Loops and Arrays Exercises</a>
     
     
   </body>
