Did Midterm Review Exercises and User Input

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <a href="Labs/Lab5/index.html">Objects Exercises</a><br>
     <a href="Labs/Lab6/index.html">Document Object Manipulation Exercuses</a><br>
 
-    <a href="Labs/Lab7/index.html">Loops and Arrays Exercises</a>
+    <a href="Labs/Lab7/index.html">Loops and Arrays Exercises</a> <br>
+
+    <a href="Labs/MidtermExercises/index.html">Midterm Review Exercises</a> <br>
+
+    <a href="Labs/UserInput/index.html">User Input Exercises</a><br>
     
+
     
   </body>
 </html>
