array computation exercises

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <a href="Labs/Events/index.html">Events Exercises</a><br>
 
+    <a href="Labs/ArrayComputations/index.html">Array Computations Exercises</a><br>
     
   </body>
 </html>
