--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <a href="Labs/Events/index.html">Events Exercises</a><br>
 
     <a href="Labs/ArrayComputations/index.html">Array Computations Exercises</a><br>
+
+    <a href="Labs/TicTacToe/index.html">Final Project: TicTacToe</a><br>
     
   </body>
 </html>
